# rigel-orchestration-plugin

./: Dockerfile  README.md  Rigelfile  Rigelfile.example  dockerfile_entrypoint.sh  pyproject.toml
app_testing/service/: Rigelfile
docs/: examples-guide-ros1ros2.md
examples/ros1/action/: CMakeLists.txt  Dockerfile  Fibonacci.action  Rigelfile  docker-compose.yaml  package.xml
examples/ros1/action/client/: Dockerfile  client.py
examples/ros1/action/server/: Dockerfile  server.py
examples/ros1/pubsub/: Dockerfile  Rigelfile  docker-compose.yaml
examples/ros1/pubsub/publisher/: Dockerfile  publisher.py
examples/ros1/pubsub/subscriber/: Dockerfile  subscriber.py
examples/ros1/service/: Dockerfile  Rigelfile  docker-compose.yaml
examples/ros1/service/client/: Dockerfile  client.py
examples/ros1/service/server/: Dockerfile  server.py
examples/ros2/action/: Dockerfile  Rigelfile  docker-compose.yaml
examples/ros2/action/client/: Dockerfile  client.py
examples/ros2/action/server/: Dockerfile  server.py
examples/ros2/pubsub/: Dockerfile  Rigelfile  docker-compose.yaml
examples/ros2/pubsub/publisher/: Dockerfile  publisher.py
examples/ros2/pubsub/subscriber/: Dockerfile  subscriber.py
examples/ros2/service/: Dockerfile  Rigelfile  docker-compose.yaml
examples/ros2/service/client/: Dockerfile  client.py
examples/ros2/service/server/: server.py
src/: models.py  plugin.py
tests/: test_plugin.py
