[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rigel-orchestration-plugin"
version = "0.1.0"
description = "An orchestration tool that enables Rigel to manage the deployment of applications with Kubernetes."
authors = [{ name = "Nicholas Hopf", email = "nicholas.hopf@inesctec.pt"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "kubernetes>=31.0.0,<32.0.0",
    "pydantic<2.0",
    "rigel",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D100", "D104", "D203", "D213", "G004", "COM812", "ISC001"]
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG", # Unused function args (fixtures)
    "FBT", # Don't care about booleans as positional arguments in tests
    "PLR2004", # Magic value used in comparison
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
"app_testing/**/*.py" = [
    "ALL",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "--cov=src --cov-report=term-missing"

[tool.setuptools]
packages = ["src"]

[tool.uv.sources]
rigel = { git = "ssh://git@github.com/robotair/rigel.git", branch = "dev" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
